[ADF-1384] fix placeholder overlapping with label in form (#2212)
* fix placeholder overlapping with label in form

* fix import material module

--- a/ng2-components/ng2-activiti-form/src/components/widgets/container/container.widget.scss
+++ b/ng2-components/ng2-activiti-form/src/components/widgets/container/container.widget.scss
@@ -37,7 +37,20 @@ container-widget{
         width: 95%;
     }
 
+    .mat-input-placeholder-wrapper{
+        top:0px !important;
+    }
+
+    .mat-input-placeholder{
+        top: 2.5em !important;
+    }
+
     .mat-focused {
+
+        .mat-input-placeholder-wrapper{
+            display: none;
+        }
+
         label {
             transform: scaleX(1);
             transition: transform 150ms linear,
